--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.5.0
   carousel_slider: ^4.2.1
+  google_fonts: ^6.1.0
+  shared_preferences: ^2.2.1
+  path_provider: ^2.1.1
+  sqflite: ^2.3.0
+  badges: ^3.1.2
+  provider: ^6.0.5
+  
 
 dev_dependencies:
   flutter_test:
